parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> s_prim
Rule 1     s_prim -> program
Rule 2     program -> program_component
Rule 3     program -> program_component program
Rule 4     program_component -> program_item
Rule 5     program_component -> COMMENT
Rule 6     program_component -> PREPROCESSOR_LINE
Rule 7     program_item -> declaration_statement
Rule 8     program_item -> function_definition_statement
Rule 9     statement -> any_statement
Rule 10    statement -> COMMENT
Rule 11    statement -> SEMICOLON
Rule 12    statements -> statement
Rule 13    statements -> statement statements
Rule 14    opt_statements -> statements
Rule 15    opt_statements -> empty
Rule 16    statements_block -> L_BRACE opt_statements R_BRACE
Rule 17    any_statement -> declaration_statement
Rule 18    any_statement -> assign_statement
Rule 19    any_statement -> function_statement
Rule 20    any_statement -> return_statement
Rule 21    any_statement -> while_loop_statement
Rule 22    any_statement -> do_while_loop_statement
Rule 23    any_statement -> break_statement
Rule 24    any_statement -> for_loop_statement
Rule 25    any_statement -> if_statement_block
Rule 26    any_statement -> print_statement
Rule 27    any_statement -> scan_statement
Rule 28    declaration_statement -> type ID opt_array_mark SEMICOLON
Rule 29    declaration_statement -> type ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
Rule 30    declaration_statement -> CONST type ID opt_array_mark SEMICOLON
Rule 31    declaration_statement -> CONST type ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
Rule 32    function_definition_statement -> type ID L_BRACKET opt_args R_BRACKET statements_block
Rule 33    assign_statement -> assign_expression SEMICOLON
Rule 34    function_statement -> function_expression SEMICOLON
Rule 35    return_statement -> RETURN value_expression SEMICOLON
Rule 36    break_statement -> BREAK SEMICOLON
Rule 37    while_loop_statement -> WHILE L_BRACKET logical_expression R_BRACKET statements_block
Rule 38    while_loop_statement -> WHILE L_BRACKET value_expression R_BRACKET statements_block
Rule 39    do_while_loop_statement -> DO statements_block WHILE L_BRACKET logical_expression R_BRACKET SEMICOLON
Rule 40    do_while_loop_statement -> DO statements_block WHILE L_BRACKET value_expression R_BRACKET SEMICOLON
Rule 41    for_loop_statement -> FOR L_BRACKET decl_stat_or_sem opt_logical_expression SEMICOLON opt_assign_expression R_BRACKET statements_block
Rule 42    decl_stat_or_sem -> declaration_statement
Rule 43    decl_stat_or_sem -> SEMICOLON
Rule 44    if_statement_block -> if_statement
Rule 45    if_statement_block -> if_statement else_else_if_statements_block
Rule 46    if_statement -> IF L_BRACKET logical_expression R_BRACKET statements_block
Rule 47    if_statement -> IF L_BRACKET value_expression R_BRACKET statements_block
Rule 48    else_else_if_statements_block -> else_statement
Rule 49    else_else_if_statements_block -> else_if_statement else_else_if_statements_block
Rule 50    else_else_if_statements_block -> else_if_statement
Rule 51    else_statement -> ELSE statements_block
Rule 52    else_if_statement -> ELSE if_statement
Rule 53    print_statement -> PRINTF L_BRACKET value_expression R_BRACKET
Rule 54    scan_statement -> SCANF L_BRACKET AMPERSAND ID R_BRACKET
Rule 55    declaration_value_expression -> value_expression
Rule 56    declaration_value_expression -> L_BRACE listed_values R_BRACE
Rule 57    declaration_value_expression -> L_BRACE declaration_value_expression R_BRACE
Rule 58    value_expression -> math_expression
Rule 59    value_expression -> function_expression
Rule 60    value_expression -> value
Rule 61    value_expression -> trinary_mark_expression
Rule 62    value_expression -> L_BRACKET value_expression R_BRACKET
Rule 63    opt_value_expression -> value_expression
Rule 64    opt_value_expression -> empty
Rule 65    math_expression -> L_BRACKET math_expression R_BRACKET
Rule 66    math_expression -> MINUS math_expression
Rule 67    math_expression -> MINUS value
Rule 68    math_expression -> value math_op value
Rule 69    logical_expression -> logical_expression bool_op logical_expression
Rule 70    logical_expression -> NEGATION logical_expression
Rule 71    logical_expression -> value_expression comparison_op value_expression
Rule 72    logical_expression -> L_BRACKET logical_expression R_BRACKET
Rule 73    function_expression -> ID L_BRACKET opt_listed_values R_BRACKET
Rule 74    trinary_mark_expression -> logical_expression QUESTION_MARK value_expression COLON value_expression
Rule 75    assign_expression -> ID assign_op value_expression
Rule 76    assign_expression -> list_element_extraction assign_op value_expression
Rule 77    assign_expression -> unary_op ID
Rule 78    assign_expression -> ID unary_op
Rule 79    opt_logical_expression -> logical_expression
Rule 80    opt_logical_expression -> empty
Rule 81    opt_assign_expression -> assign_expression
Rule 82    opt_assign_expression -> empty
Rule 83    type -> INT
Rule 84    type -> FLOAT
Rule 85    type -> DOUBLE
Rule 86    type -> CHAR
Rule 87    type -> BOOL
Rule 88    type -> LONG
Rule 89    type -> VOID
Rule 90    value -> INTEGER
Rule 91    value -> DECIMAL
Rule 92    value -> CHARACTER
Rule 93    value -> STRING
Rule 94    value -> TRUE
Rule 95    value -> FALSE
Rule 96    value -> ID
Rule 97    value -> list_element_extraction
Rule 98    list_element_extraction -> ID L_SQUARE_BRACKET value_expression R_SQUARE_BRACKET
Rule 99    listed_values -> value_expression COMMA value_expression
Rule 100   listed_values -> value_expression COMMA listed_values
Rule 101   math_op -> PLUS
Rule 102   math_op -> MINUS
Rule 103   math_op -> MUL
Rule 104   math_op -> DIV
Rule 105   math_op -> MOD
Rule 106   unary_op -> INCREMENT
Rule 107   unary_op -> DECREMENT
Rule 108   bool_op -> AND
Rule 109   bool_op -> OR
Rule 110   comparison_op -> EQUAL
Rule 111   comparison_op -> NOT_EQUAL
Rule 112   comparison_op -> GREATER
Rule 113   comparison_op -> GREATER_EQUAL
Rule 114   comparison_op -> LESSER
Rule 115   comparison_op -> LESSER_EQUAL
Rule 116   assign_op -> ASSIGN
Rule 117   assign_op -> PLUS_ASSIGN
Rule 118   assign_op -> MINUS_ASSIGN
Rule 119   assign_op -> MUL_ASSIGN
Rule 120   assign_op -> DIV_ASSIGN
Rule 121   assign_op -> MOD_ASSIGN
Rule 122   array_mark -> L_SQUARE_BRACKET opt_value_expression R_SQUARE_BRACKET
Rule 123   opt_array_mark -> array_mark
Rule 124   opt_array_mark -> empty
Rule 125   opt_listed_values -> listed_values
Rule 126   opt_listed_values -> empty
Rule 127   args -> type ID
Rule 128   args -> type ID COMMA args
Rule 129   opt_args -> args
Rule 130   opt_args -> empty
Rule 131   empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 54
AND                  : 108
ASSIGN               : 29 31 116
BOOL                 : 87
BREAK                : 36
CHAR                 : 86
CHARACTER            : 92
COLON                : 74
COMMA                : 99 100 128
COMMENT              : 5 10
CONST                : 30 31
DECIMAL              : 91
DECREMENT            : 107
DIV                  : 104
DIV_ASSIGN           : 120
DO                   : 39 40
DOUBLE               : 85
ELSE                 : 51 52
EQUAL                : 110
FALSE                : 95
FLOAT                : 84
FOR                  : 41
GREATER              : 112
GREATER_EQUAL        : 113
ID                   : 28 29 30 31 32 54 73 75 77 78 96 98 127 128
IF                   : 46 47
INCREMENT            : 106
INT                  : 83
INTEGER              : 90
LESSER               : 114
LESSER_EQUAL         : 115
LONG                 : 88
L_BRACE              : 16 56 57
L_BRACKET            : 32 37 38 39 40 41 46 47 53 54 62 65 72 73
L_SQUARE_BRACKET     : 98 122
MINUS                : 66 67 102
MINUS_ASSIGN         : 118
MOD                  : 105
MOD_ASSIGN           : 121
MUL                  : 103
MUL_ASSIGN           : 119
NEGATION             : 70
NOT_EQUAL            : 111
OR                   : 109
PLUS                 : 101
PLUS_ASSIGN          : 117
PREPROCESSOR_LINE    : 6
PRINTF               : 53
QUESTION_MARK        : 74
RETURN               : 35
R_BRACE              : 16 56 57
R_BRACKET            : 32 37 38 39 40 41 46 47 53 54 62 65 72 73
R_SQUARE_BRACKET     : 98 122
SCANF                : 54
SEMICOLON            : 11 28 29 30 31 33 34 35 36 39 40 41 43
STRING               : 93
TRUE                 : 94
VOID                 : 89
WHILE                : 37 38 39 40
error                : 

Nonterminals, with rules where they appear

any_statement        : 9
args                 : 128 129
array_mark           : 123
assign_expression    : 33 81
assign_op            : 75 76
assign_statement     : 18
bool_op              : 69
break_statement      : 23
comparison_op        : 71
decl_stat_or_sem     : 41
declaration_statement : 7 17 42
declaration_value_expression : 29 31 57
do_while_loop_statement : 22
else_else_if_statements_block : 45 49
else_if_statement    : 49 50
else_statement       : 48
empty                : 15 64 80 82 124 126 130
for_loop_statement   : 24
function_definition_statement : 8
function_expression  : 34 59
function_statement   : 19
if_statement         : 44 45 52
if_statement_block   : 25
list_element_extraction : 76 97
listed_values        : 56 100 125
logical_expression   : 37 39 46 69 69 70 72 74 79
math_expression      : 58 65 66
math_op              : 68
opt_args             : 32
opt_array_mark       : 28 29 30 31
opt_assign_expression : 41
opt_listed_values    : 73
opt_logical_expression : 41
opt_statements       : 16
opt_value_expression : 122
print_statement      : 26
program              : 1 3
program_component    : 2 3
program_item         : 4
return_statement     : 20
s_prim               : 0
scan_statement       : 27
statement            : 12 13
statements           : 13 14
statements_block     : 32 37 38 39 40 41 46 47 51
trinary_mark_expression : 61
type                 : 28 29 30 31 32 127 128
unary_op             : 77 78
value                : 60 67 68 68
value_expression     : 35 38 40 47 53 55 62 63 71 71 74 74 75 76 98 99 99 100
while_loop_statement : 21

Parsing method: LALR

state 0

    (0) S' -> . s_prim
    (1) s_prim -> . program
    (2) program -> . program_component
    (3) program -> . program_component program
    (4) program_component -> . program_item
    (5) program_component -> . COMMENT
    (6) program_component -> . PREPROCESSOR_LINE
    (7) program_item -> . declaration_statement
    (8) program_item -> . function_definition_statement
    (28) declaration_statement -> . type ID opt_array_mark SEMICOLON
    (29) declaration_statement -> . type ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
    (30) declaration_statement -> . CONST type ID opt_array_mark SEMICOLON
    (31) declaration_statement -> . CONST type ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
    (32) function_definition_statement -> . type ID L_BRACKET opt_args R_BRACKET statements_block
    (83) type -> . INT
    (84) type -> . FLOAT
    (85) type -> . DOUBLE
    (86) type -> . CHAR
    (87) type -> . BOOL
    (88) type -> . LONG
    (89) type -> . VOID

    COMMENT         shift and go to state 5
    PREPROCESSOR_LINE shift and go to state 6
    CONST           shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    BOOL            shift and go to state 15
    LONG            shift and go to state 16
    VOID            shift and go to state 17

    s_prim                         shift and go to state 1
    program                        shift and go to state 2
    program_component              shift and go to state 3
    program_item                   shift and go to state 4
    declaration_statement          shift and go to state 7
    function_definition_statement  shift and go to state 8
    type                           shift and go to state 9

state 1

    (0) S' -> s_prim .



state 2

    (1) s_prim -> program .

    $end            reduce using rule 1 (s_prim -> program .)


state 3

    (2) program -> program_component .
    (3) program -> program_component . program
    (2) program -> . program_component
    (3) program -> . program_component program
    (4) program_component -> . program_item
    (5) program_component -> . COMMENT
    (6) program_component -> . PREPROCESSOR_LINE
    (7) program_item -> . declaration_statement
    (8) program_item -> . function_definition_statement
    (28) declaration_statement -> . type ID opt_array_mark SEMICOLON
    (29) declaration_statement -> . type ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
    (30) declaration_statement -> . CONST type ID opt_array_mark SEMICOLON
    (31) declaration_statement -> . CONST type ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
    (32) function_definition_statement -> . type ID L_BRACKET opt_args R_BRACKET statements_block
    (83) type -> . INT
    (84) type -> . FLOAT
    (85) type -> . DOUBLE
    (86) type -> . CHAR
    (87) type -> . BOOL
    (88) type -> . LONG
    (89) type -> . VOID

    $end            reduce using rule 2 (program -> program_component .)
    COMMENT         shift and go to state 5
    PREPROCESSOR_LINE shift and go to state 6
    CONST           shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    BOOL            shift and go to state 15
    LONG            shift and go to state 16
    VOID            shift and go to state 17

    program_component              shift and go to state 3
    program                        shift and go to state 18
    program_item                   shift and go to state 4
    declaration_statement          shift and go to state 7
    function_definition_statement  shift and go to state 8
    type                           shift and go to state 9

state 4

    (4) program_component -> program_item .

    COMMENT         reduce using rule 4 (program_component -> program_item .)
    PREPROCESSOR_LINE reduce using rule 4 (program_component -> program_item .)
    CONST           reduce using rule 4 (program_component -> program_item .)
    INT             reduce using rule 4 (program_component -> program_item .)
    FLOAT           reduce using rule 4 (program_component -> program_item .)
    DOUBLE          reduce using rule 4 (program_component -> program_item .)
    CHAR            reduce using rule 4 (program_component -> program_item .)
    BOOL            reduce using rule 4 (program_component -> program_item .)
    LONG            reduce using rule 4 (program_component -> program_item .)
    VOID            reduce using rule 4 (program_component -> program_item .)
    $end            reduce using rule 4 (program_component -> program_item .)


state 5

    (5) program_component -> COMMENT .

    COMMENT         reduce using rule 5 (program_component -> COMMENT .)
    PREPROCESSOR_LINE reduce using rule 5 (program_component -> COMMENT .)
    CONST           reduce using rule 5 (program_component -> COMMENT .)
    INT             reduce using rule 5 (program_component -> COMMENT .)
    FLOAT           reduce using rule 5 (program_component -> COMMENT .)
    DOUBLE          reduce using rule 5 (program_component -> COMMENT .)
    CHAR            reduce using rule 5 (program_component -> COMMENT .)
    BOOL            reduce using rule 5 (program_component -> COMMENT .)
    LONG            reduce using rule 5 (program_component -> COMMENT .)
    VOID            reduce using rule 5 (program_component -> COMMENT .)
    $end            reduce using rule 5 (program_component -> COMMENT .)


state 6

    (6) program_component -> PREPROCESSOR_LINE .

    COMMENT         reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    PREPROCESSOR_LINE reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    CONST           reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    INT             reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    FLOAT           reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    DOUBLE          reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    CHAR            reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    BOOL            reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    LONG            reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    VOID            reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)
    $end            reduce using rule 6 (program_component -> PREPROCESSOR_LINE .)


state 7

    (7) program_item -> declaration_statement .

    COMMENT         reduce using rule 7 (program_item -> declaration_statement .)
    PREPROCESSOR_LINE reduce using rule 7 (program_item -> declaration_statement .)
    CONST           reduce using rule 7 (program_item -> declaration_statement .)
    INT             reduce using rule 7 (program_item -> declaration_statement .)
    FLOAT           reduce using rule 7 (program_item -> declaration_statement .)
    DOUBLE          reduce using rule 7 (program_item -> declaration_statement .)
    CHAR            reduce using rule 7 (program_item -> declaration_statement .)
    BOOL            reduce using rule 7 (program_item -> declaration_statement .)
    LONG            reduce using rule 7 (program_item -> declaration_statement .)
    VOID            reduce using rule 7 (program_item -> declaration_statement .)
    $end            reduce using rule 7 (program_item -> declaration_statement .)


state 8

    (8) program_item -> function_definition_statement .

    COMMENT         reduce using rule 8 (program_item -> function_definition_statement .)
    PREPROCESSOR_LINE reduce using rule 8 (program_item -> function_definition_statement .)
    CONST           reduce using rule 8 (program_item -> function_definition_statement .)
    INT             reduce using rule 8 (program_item -> function_definition_statement .)
    FLOAT           reduce using rule 8 (program_item -> function_definition_statement .)
    DOUBLE          reduce using rule 8 (program_item -> function_definition_statement .)
    CHAR            reduce using rule 8 (program_item -> function_definition_statement .)
    BOOL            reduce using rule 8 (program_item -> function_definition_statement .)
    LONG            reduce using rule 8 (program_item -> function_definition_statement .)
    VOID            reduce using rule 8 (program_item -> function_definition_statement .)
    $end            reduce using rule 8 (program_item -> function_definition_statement .)


state 9

    (28) declaration_statement -> type . ID opt_array_mark SEMICOLON
    (29) declaration_statement -> type . ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
    (32) function_definition_statement -> type . ID L_BRACKET opt_args R_BRACKET statements_block

    ID              shift and go to state 19


state 10

    (30) declaration_statement -> CONST . type ID opt_array_mark SEMICOLON
    (31) declaration_statement -> CONST . type ID opt_array_mark ASSIGN declaration_value_expression SEMICOLON
    (83) type -> . INT
    (84) type -> . FLOAT
    (85) type -> . DOUBLE
    (86) type -> . CHAR
    (87) type -> . BOOL
    (88) type -> . LONG
    (89) type -> . VOID

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    BOOL            shift and go to state 15
    LONG            shift and go to state 16
    VOID            shift and go to state 17

    type                           shift and go to state 20

state 11

    (83) type -> INT .

    ID              reduce using rule 83 (type -> INT .)


state 12

    (84) type -> FLOAT .

    ID              reduce using rule 84 (type -> FLOAT .)


state 13

    (85) type -> DOUBLE .

    ID              reduce using rule 85 (type -> DOUBLE .)


state 14

    (86) type -> CHAR .

    ID              reduce using rule 86 (type -> CHAR .)


state 15

    (87) type -> BOOL .

    ID              reduce using rule 87 (type -> BOOL .)


state 16

    (88) type -> LONG .

    ID              reduce using rule 88 (type -> LONG .)


state 17

    (89) type -> VOID .

    ID              reduce using rule 89 (type -> VOID .)


state 18

    (3) program -> program_component program .

    $end            reduce using rule 3 (program -> program_component program .)


state 19

    (28) declaration_statement -> type ID . opt_array_mark SEMICOLON
    (29) declaration_statement -> type ID . opt_array_mark ASSIGN declaration_value_expression SEMICOLON
    (32) function_definition_statement -> type ID . L_BRACKET opt_args R_BRACKET statements_block
    (123) opt_array_mark -> . array_mark
    (124) opt_array_mark -> . empty
    (122) array_mark -> . L_SQUARE_BRACKET opt_value_expression R_SQUARE_BRACKET
    (131) empty -> .

    L_BRACKET       shift and go to state 22
    L_SQUARE_BRACKET shift and go to state 25
    SEMICOLON       reduce using rule 131 (empty -> .)
    ASSIGN          reduce using rule 131 (empty -> .)
